tests/valid/test2.vyp
void main(void) {
    int a, b;
    a = 5;
    b = 10;
    print("Sum: ", a + b, "\n");
}
