tests/invalid/Expressions/Invalid_Binary_Operation.vyp
void main(void) {
    int a;
    string b;
    a = 5 + b;  // Cannot add a string to an integer
}
